@@ -2,7 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -16,78 +15,64 @@ import static org.junit.Assert.assertThat;
  */
 public class ConvertMatrix2ListTest {
 
+    private ConvertMatrix2List listConvert = new ConvertMatrix2List();
+
     @Test
     public void when2on2ArrayThenList4() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2},
-                {3, 4}
-        };
-        List<Integer> expect = Arrays.asList(
+                {3, 4}};
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
-        List<Integer> result = list.toList(input);
+        List<Integer> result = this.listConvert.toList(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void when3on3ArrayThenList9() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2, 3},
                 {4, 5, 6},
-                {7, 8, 9}
-        };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9
-        );
-        List<Integer> result = list.toList(input);
+                {7, 8, 9}};
+        List<Integer> expect = List.of(
+                1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> result = this.listConvert.toList(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void when3on25ArrayThenList8() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2, 3},
                 {4, 5},
-                {6, 7, 8}
-        };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8
-        );
-        List<Integer> result = list.toList(input);
+                {6, 7, 8}};
+        List<Integer> expect = List.of(
+                1, 2, 3, 4, 5, 6, 7, 8);
+        List<Integer> result = this.listConvert.toList(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void when2on55ArrayThenList10() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
-                {1, 2},
-                {3, 4},
-                {5, 6},
-                {7, 8},
-                {9, 10}
-        };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9, 10
-        );
-        List<Integer> result = list.toList(input);
+                {1, 2}, {3, 4},
+                {5, 6}, {7, 8},
+                {9, 10}};
+        List<Integer> expect = List.of(
+                1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        List<Integer> result = this.listConvert.toList(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void when2on65ArrayThenList11() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2, 3, 4, 5, 6},
-                {7, 8, 9, 10, 11}
-        };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-        );
-        List<Integer> result = list.toList(input);
+                {7, 8, 9, 10, 11}};
+        List<Integer> expect = List.of(
+                1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11);
+        List<Integer> result = this.listConvert.toList(input);
         assertThat(result, is(expect));
     }
 }
